Bug 29213 - video artifacts if used dualscreen mode
Summary: video artifacts if used dualscreen mode
Status: RESOLVED FIXED
Alias: None
Product: xorg
Classification: Unclassified
Component: Driver/intel (show other bugs)
Version: git
Hardware: x86 (IA32) Linux (All)
: medium normal
Assignee: Carl Worth
QA Contact: Xorg Project Team
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2010-07-22 03:30 UTC by Oleksij Rempel
Modified: 2010-07-22 08:51 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
xorg log (32.68 KB, text/plain)
2010-07-22 03:30 UTC, Oleksij Rempel
no flags Details
dmesg (67.86 KB, text/plain)
2010-07-22 03:30 UTC, Oleksij Rempel
no flags Details

Description Oleksij Rempel 2010-07-22 03:30:11 UTC
Created attachment 37301 [details]
xorg log

I get pixel/video artifacts after moving video window if i use dualscreen mode.

Steps to reproduce:
- attach second monitor
- mplayer -vo xv somoe.avi
- move some window over window with video

hardware:
asus eeepc 1005ha (945gm

intel_stepping 
Vendor: 0x8086, Device: 0x27ae, Revision: 0x03 (??)
Comment 1 Oleksij Rempel 2010-07-22 03:30:41 UTC
Created attachment 37302 [details]
dmesg
Comment 2 Oleksij Rempel 2010-07-22 03:39:05 UTC
On this screencast you can see how it's looks like.

http://videobin.org/+1ir/1rw.html



apt-cache policy xserver-xorg-video-intel
xserver-xorg-video-intel:
  Installiert: 2:2.12.0+git20100716.d48d584a-0ubuntu0sarvatt~lucid
  Kandidat: 2:2.12.0+git20100716.d48d584a-0ubuntu0sarvatt~lucid
  Versions-Tabelle:
 *** 2:2.12.0+git20100716.d48d584a-0ubuntu0sarvatt~lucid 0
        500 http://ppa.launchpad.net/xorg-edgers/ppa/ubuntu/ lucid/main Packages
        100 /var/lib/dpkg/status
     2:2.9.1-3ubuntu5 0
        500 http://de.archive.ubuntu.com/ubuntu/ lucid/main Packages


kernel version:
commit d44a78e83f7549b3c4ae611e667a0db265cf2e00
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Mon Jul 5 18:01:47 2010 +0100

    drm/i915: Include any alternate names by which the device is known.
    
    When trying to keep track of features between the kernel, the 2D driver,
    mesa and the specs, it helps to list any other name by which the device
    is referred to.
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>
    Signed-off-by: Eric Anholt <eric@anholt.net>
Comment 3 Chris Wilson 2010-07-22 08:51:40 UTC
commit 142ffa287236adbc3c5f6ead46c63c4c541ace0c
Author: Chris Wilson <chris@chris-wilson.co.uk>
Date:   Thu Jul 22 16:42:26 2010 +0100

    video/i915: ValidateGC after setting clip.
    
    Order is important. And ensure that the scratch GC is performing clip by
    children.
    
    Fixes:
    
      Bug 29213 - video artifacts if used dualscreen mode
      https://bugs.freedesktop.org/show_bug.cgi?id=29213
    
    Signed-off-by: Chris Wilson <chris@chris-wilson.co.uk>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.